--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
     
 </head>
 <body>
-    DUMMY
+    <div class="display"></div>
+
+    <button class="fight">FIGHT</button>
+    <button class="item">ITEM</button>
+    <button class="run">RUN</button>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
@@ -23,6 +27,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
     integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js"></script> <!--temp, return to ./js/app ../serverLogic/battle.js-->
 </body>
 </html>
